--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "serve": "node build/server/server.js",
     "dev": "nodemon"
   },
-  "engines":{
-    "node":"9.3.0"
+  "engines": {
+    "node": "9.3.0"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.7",
+    "@types/socket.io": "^2.1.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.6",
     "ts-jest": "^23.10.4",
@@ -27,6 +28,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1"
   }
 }
