--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.9",
+    "@types/moment": "^2.13.0",
     "@types/node": "^10.12.7",
     "@types/socket.io": "^2.1.0",
     "jest": "^23.6.0",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.22.2",
     "socket.io": "^2.1.1"
   }
 }
